Add --illegal-access=deny param to java to ignore Groovy warning